# object-tracker

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  benchmark.py  benchmark_accuracy.py  benchmark_from_redis.py  benchmark_without_redis.py  check_settings.sh  demo.py  docker_build.sh  docker_push.sh  download_torch_dependencies.sh  main.py  pyproject.toml  run_experiments.py  run_stage.py  save_annotated_frames.py  settings.template.yaml  start_make.sh
.github/: dependabot.yml
.github/workflows/: build-publish-latest.yaml  build-release-latest.yaml  create-release.yaml  pr_build.yaml
benchmarks/: analyse.py  compare.py  evaluate.py  plot.py
benchmarks/accuracy/: label_studio_CAM-HAZELDELL-126THST.json  transform_label_json.py
benchmarks/boxmot/botsort/: 0_2_4_6_cores.csv  1_core.csv  performance_cores.csv
benchmarks/boxmot/bytetrack/: 0_2_4_6_cores.csv  1_core.csv  frames_analysis.txt  performance_cores.csv
benchmarks/boxmot/deepocsort/: 0_2_4_6_cores.csv  1_core.csv  performance_cores.csv
benchmarks/boxmot/ocsort/: 0_2_4_6_cores.csv  1_core.csv  cprofile_one_core.prof  cprofile_performance.prof  performance_cores.csv
benchmarks/original_script/: 0-1_cores.csv  0-2_cores.csv  0-3_cores.csv  0-4_cores.csv  0-5_cores.csv  0-6_cores.csv  0_2_4_6_cores.csv  1_core.csv  all_cores_original.csv  cProfile.prof  line_profiler.txt  performance_cores_original.csv  profile.html  profile.json
boxmot/trackers/botsort/: bot_sort.py
boxmot/trackers/bytetrack/: byte_tracker.py
boxmot/trackers/deepocsort/: deep_ocsort.py
debian/: changelog  control  install  objecttracker.service  postinst  preinst  prerm  requirements.txt  rules
debian/source/: options
doc/: DEV_README.md
objecttracker/: __init__.py  config.py  errors.py  stage.py  tracker.py
objecttracker/trackingimpl/: reid_export.py
objecttracker/trackingimpl/boxmot/: __init__.py
objecttracker/trackingimpl/boxmot/appearance/: reid_model_factory.py  reid_multibackend.py
objecttracker/trackingimpl/boxmot/appearance/backbones/: __init__.py
objecttracker/trackingimpl/boxmot/motion/cmc/: __init__.py  ecc.py  orb.py  sift.py  sof.py
objecttracker/trackingimpl/boxmot/utils/: association.py  checks.py
objecttracker/trackingimpl/deepocsort/: cmc.py  kalmanfilter.py  ocsort.py  reid_multibackend.py
tests/: test_object_tracker.py  test_tracker.py
(+8 files in other folders)
