[tool.poetry]
name = "objecttracker"
version = "3.2.1"
description = ""
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPLv3"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.24.0"
pydantic = "^2.0.0"
visionapi = { git = "https://github.com/starwit/vision-api.git", subdirectory = "python/visionapi", tag = "3.2.0" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.11.2" }
opencv-python = "^4.7.0.72"
filterpy = "^1.4.5"
redis = "^5.3.1"
pydantic-settings = "^2.10.1"
prometheus-client = "^0.22.1"
boxmot = "15.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
